# kabu-manager

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: broker_profile.rs  commands.rs  csv_import.rs  database.rs  lib.rs  main.rs  models.rs  realized_pnl_import.rs  trade_import.rs
src/lib/: AssetHistoryChart.svelte  CompositionChart.svelte  HoldingsTable.svelte  ImportBatchManager.svelte  StockAnalysisChart.svelte  TradeAnalysisPanel.svelte
