[package]
name = "kabu-manager"
version = "0.1.0"
description = "保有株管理アプリ(SBI証券/e-smart証券のCSV取り込み・SQLite記録・可視化)"
edition = "2021"

[lib]
name = "kabu_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
thiserror = "2"
regex = "1"
